# financeEnv

./: .gitignore  CLAUDE.md  Dockerfile  HF_SPACE_TESTING.md  LOCAL_TESTING.md  README.md  TESTING.md  app.py  financeEnv_tech_spec.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: sync_to_hf.yml
baseline/: run_baseline.py  run_baseline_http.py  test_e2e_task1.py
finance_env/: __init__.py  agent.py  env.py  inference.py  models.py  validate_submission.py
finance_env/data/: categories.json  task1_transactions.json  task2_ground_truth.json  task2_multi_source.json  task3_goals.json  task3_history.json  task3_simulation.json
finance_env/tasks/: task1_categorize.py  task2_reconcile.py  task3_budget.py
scripts/: deploy_hf.py
server/: app.py
