[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-env"
version = "0.1.0"
description = "OpenEnv-compatible reinforcement learning environment for financial task automation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "FinanceEnv Contributors"},
]
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "python-dotenv",
    "huggingface_hub",
    "openenv-core",
]

[project.scripts]
server = "finance_env.server.app:main"
agent = "finance_env.agent:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/romapai/finance-env-india"
Repository = "https://github.com/romapai/financeEnv"

[tool.setuptools]
include-package-data = true
packages = ["finance_env", "finance_env.server"]
package-dir = {"finance_env" = "finance_env", "finance_env.server" = "server"}
